fix(feat_EnhanceCarousel): Stop overflowing items list content

--- a/src/carousel-component/carousel.css
+++ b/src/carousel-component/carousel.css
@@ -43,7 +43,7 @@
 .carousel__items-list {
   grid-row: 2;
   grid-column: 1 / span 3;
-  justify-self: center;
+  justify-items: center;
 
   margin: 0;
   padding: 0;
